# xloft

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  REQUIREMENTS.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  versions.json
.github/workflows/: test.yml
0.10/: 404.html  index.html  objects.inv  sitemap.xml
0.10/pages/alias_dict/: index.html
0.10/pages/converters/: index.html
0.10/pages/errors/: index.html
0.10/pages/installation/: index.html
0.10/pages/itis/: index.html
0.10/pages/named_tuple/: index.html
0.10/pages/usage/: index.html
0.10/pages/usage/alias_dict/: index.html
0.10/pages/usage/converters/: index.html
0.10/pages/usage/itis/: index.html
0.10/pages/usage/named_tuple/: index.html
0.10/search/: search_index.json
0.11/: 404.html  index.html  sitemap.xml
0.11/pages/alias_dict/: index.html
0.11/pages/converters/: index.html
0.11/pages/errors/: index.html
0.11/pages/installation/: index.html
0.11/pages/itis/: index.html
0.11/pages/named_tuple/: index.html
0.11/pages/usage/: index.html
0.11/pages/usage/alias_dict/: index.html
0.11/pages/usage/converters/: index.html
0.11/search/: search_index.json
0.4/: 404.html  index.html  objects.inv  sitemap.xml
0.4/md_pages/errors/: index.html
0.4/md_pages/human/: index.html
0.4/md_pages/installation/: index.html
0.4/md_pages/namedtuple/: index.html
0.4/md_pages/quantum/: index.html
0.4/pages/errors/: index.html
0.4/pages/human/: index.html
0.4/pages/installation/: index.html
0.4/pages/namedtuple/: index.html
0.4/pages/quantum/: index.html
0.4/search/: search_index.json
0.5/: 404.html  index.html  objects.inv  sitemap.xml
0.5/custom_style/: github_deep_purple.css  github_green.css  github_orange.css  github_red.css
0.5/pages/errors/: index.html
0.5/pages/human/: index.html
0.5/pages/installation/: index.html
0.5/pages/namedtuple/: index.html
0.5/pages/usage/: index.html
0.5/search/: search_index.json
0.6/: 404.html  index.html  objects.inv  sitemap.xml
0.6/custom_style/: github_light_green.css  github_pink.css  github_teal.css
0.6/pages/constants/: index.html
0.6/pages/converter/: index.html
0.6/pages/converters/: index.html
0.6/pages/errors/: index.html
0.6/pages/human/: index.html
0.6/pages/installation/: index.html
0.6/pages/itis/: index.html
0.6/pages/namedtuple/: index.html
0.6/pages/usage/: index.html
0.6/search/: search_index.json
0.7/: 404.html  index.html  sitemap.xml
0.7/custom_style/: github_green.css
0.7/pages/converters/: index.html
0.7/pages/errors/: index.html
0.7/pages/installation/: index.html
0.7/pages/itis/: index.html
0.7/pages/namedtuple/: index.html
0.7/pages/usage/: index.html
0.7/search/: search_index.json
0.8/: 404.html  index.html  objects.inv  sitemap.xml
0.8/custom_style/: github_red.css
0.8/pages/converters/: index.html
0.8/pages/errors/: index.html
0.8/pages/installation/: index.html
0.8/pages/itis/: index.html
0.8/pages/namedtuple/: index.html
0.8/pages/usage/: index.html
0.8/search/: search_index.json
0.9/: 404.html  index.html  objects.inv  sitemap.xml
0.9/custom_style/: github_black.css  github_deep_purple.css  github_green.css  github_indigo.css  github_light_green.css  github_orange.css  github_pink.css  github_teal.css
0.9/pages/converters/: index.html
0.9/pages/errors/: index.html
0.9/pages/installation/: index.html
0.9/pages/itis/: index.html
0.9/pages/namedtuple/: index.html
0.9/pages/usage/: index.html
0.9/search/: search_index.json
1.0/: 404.html  index.html  sitemap.xml
1.0/pages/alias_dict/: index.html
1.0/pages/converters/: index.html
1.0/pages/errors/: index.html
1.0/pages/installation/: index.html
1.0/pages/itis/: index.html
1.0/pages/named_tuple/: index.html
1.0/pages/usage/: index.html
1.0/search/: search_index.json
1.1/: 404.html  index.html  objects.inv  sitemap.xml
1.1/pages/alias_dict/: index.html
1.1/pages/converters/: index.html
1.1/pages/errors/: index.html
1.1/pages/installation/: index.html
1.1/pages/itis/: index.html
1.1/pages/named_tuple/: index.html
1.1/pages/usage/: index.html
1.1/search/: search_index.json
assets/: README.md
assets/project_status/: url.txt
custom_style/: github_blue.css
custom_style/github_black/css/: extra.css
custom_style/github_blue/css/: extra.css
docs/: errors.md  index.md  installation.md  namedtuple.md
docs/custom_style/: github_black.css  github_blue.css  github_deep_purple.css  github_green.css  github_indigo.css  github_light_green.css  github_orange.css  github_pink.css  github_red.css  github_teal.css
docs/github_style/css/: extra.css
docs/md_pages/: errors.md  humanism.md  installation.md  namedtuple.md  quantum.md
docs/overrides/: main.html
docs/pages/: alias_dict.md  constants.md  converter.md  converters.md  errors.md  human.md  installation.md  itis.md  named_tuple.md  quantum.md  usage.md
docs/pages/usage/: alias_dict.md  converters.md  human.md  index.md  it_is.md  itis.md  named_tuple.md
errors/: index.html
github_style/css/: extra.css
installation/: index.html
md_pages/errors/: index.html
md_pages/humanism/: index.html
md_pages/installation/: index.html
md_pages/namedtuple/: index.html
namedtuple/: index.html
overrides/: main.html
pyhelpers/: remove_pycache.py
search/: search_index.json
src/loft/: __init__.py
src/xloft/: It_is.py  __init__.py  constants.py  converter.py  errors.py  human.py  humanism.py  it_is.py  itis.py  namedtuple.py  quantum.py
src/xloft/converter/: __init__.py  human_size.py
src/xloft/converters/: __init__.py  human_size.py  roman.py  word_to_color.py
src/xloft/types/: __init__.py  alias_dict.py  named_tuple.py  namedtuple.py
tests/: test_It_is.py  test_alias_dict.py  test_constants.py  test_converter.py  test_converters.py  test_count_qubits.py  test_human.py  test_humanism.py  test_itis.py  test_named_tuple.py  test_namedtuple.py  test_quantum.py  test_quantum_loop.py  test_stub.py  test_utils.py
(+27 files in other folders)
