[project]
name = "xloft"
version = "0.1.11"
description = "(XLOFT) X-Library of tools"
readme = "README.md"
authors = [{ name = "kebasyaty", email = "kebasyaty@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12,<4.0"
keywords = ["collection", "tools", "xloft", "namedtuple"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/kebasyaty/xloft"
Repository = "https://github.com/kebasyaty/xloft"
Source = "https://github.com/kebasyaty/xloft"
"Bug Tracker" = "https://github.com/kebasyaty/xloft/issues"
Changelog = "https://github.com/kebasyaty/xloft/blob/v0/CHANGELOG.md"

[tool.uv]
package = true
default-groups = ["dev", "test", "docs"]
compile-bytecode = true
check-url = "https://pypi.org/simple"

[tool.uv.build-backend]
module-root = "src"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.17.1", "ruff>=0.12.7"]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "mkdocstrings[python]>=0.30.0",
]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-httpx>=0.35.0",
    "pytest-mock>=3.14.1",
]

[tool.ruff]
fix = true
line-length = 100
required-version = ">=0.7.11"
src = ["src", "tests"]
include = [
    "*.py",
    "*.pyi",
    "*.ipynb",
    "**/pyproject.toml",
    "src/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
select = ["D"]
ignore = ["D417", "D206"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.mypy]
strict = true
show_error_codes = true
pretty = true
files = ["src/**/*.py", "tests/**/*.py"]
disable_error_code = ["type-arg", "no-any-return", "attr-defined", "index"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = [
    "arg-type",
    "no-untyped-def",
    "no-untyped-call",
    "func-returns-value",
    "union-attr",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
